// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BiosCard should not render hasReleaseDate 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="bios-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-16"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-18"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="BIOS title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="BIOS title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Vendor
                  </span>
                </dt>
                <dd
                  aria-label="Vendor value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Vendor value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-vendor
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Version
                  </span>
                </dt>
                <dd
                  aria-label="Version value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Version value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-version
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BiosCard should not render hasVendor 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="bios-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-10"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-12"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="BIOS title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="BIOS title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Version
                  </span>
                </dt>
                <dd
                  aria-label="Version value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Version value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-version
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Release date
                  </span>
                </dt>
                <dd
                  aria-label="Release date value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Release date value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Apr 2014
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BiosCard should not render hasVersion 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="bios-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-13"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-15"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="BIOS title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="BIOS title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Vendor
                  </span>
                </dt>
                <dd
                  aria-label="Vendor value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Vendor value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-vendor
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Release date
                  </span>
                </dt>
                <dd
                  aria-label="Release date value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Release date value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Apr 2014
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BiosCard should render correctly - no data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="bios-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-1"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-3"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="BIOS title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="BIOS title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Vendor
                  </span>
                </dt>
                <dd
                  aria-label="Vendor value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Vendor value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Version
                  </span>
                </dt>
                <dd
                  aria-label="Version value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Version value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Release date
                  </span>
                </dt>
                <dd
                  aria-label="Release date value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Release date value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BiosCard should render correctly with data - wrong date 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="bios-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-7"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-9"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="BIOS title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="BIOS title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Vendor
                  </span>
                </dt>
                <dd
                  aria-label="Vendor value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Vendor value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-vendor
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Version
                  </span>
                </dt>
                <dd
                  aria-label="Version value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Version value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-version
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Release date
                  </span>
                </dt>
                <dd
                  aria-label="Release date value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Release date value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Not available
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BiosCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="bios-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-4"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-6"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="BIOS title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="BIOS title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Vendor
                  </span>
                </dt>
                <dd
                  aria-label="Vendor value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Vendor value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-vendor
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Version
                  </span>
                </dt>
                <dd
                  aria-label="Version value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Version value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-version
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Release date
                  </span>
                </dt>
                <dd
                  aria-label="Release date value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Release date value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Apr 2014
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BiosCard should render extra 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="bios-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-19"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-21"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <dl
              aria-label="BIOS title"
              class="pf-v6-c-description-list pf-m-horizontal pf-m-auto-fit"
              data-ouia-component-id="BIOS title"
              style="--pf-v6-c-description-list--m-horizontal__term--width: 20ch;"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Vendor
                  </span>
                </dt>
                <dd
                  aria-label="Vendor value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Vendor value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-vendor
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Version
                  </span>
                </dt>
                <dd
                  aria-label="Version value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Version value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test-version
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Release date
                  </span>
                </dt>
                <dd
                  aria-label="Release date value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Release date value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    01 Apr 2014
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    something
                  </span>
                </dt>
                <dd
                  aria-label="something value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="something value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    test
                  </div>
                </dd>
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    with click
                  </span>
                </dt>
                <dd
                  aria-label="with click value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="with click value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div>
                      <a
                        href="//undefined"
                      >
                        1 tests
                      </a>
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
